@@ -18,6 +18,10 @@ version 2.62
 
 	    Add --dns-rr, to allow arbitrary DNS resource records.
 
+	    Fixed bug which broke RA scheduling when an interface had
+	    two addresses in the same network. Thanks to Jim Bos for
+	    his help nailing this.
+
 
 version 2.61
 	    Re-write interface discovery code on *BSD to use
